--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,6 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.derbyclient.jar=C:\\Users\\Joseph Haftl\\Documents\\NetBeansProjects\\db-derby-10.13.1.1-lib\\lib\\derbyclient.jar
-file.reference.derbyclient.jar-1=/Users/ianchong16/NetBeansProjects/db-derby-10.13.1.1-lib/lib/derbyclient.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -39,8 +38,7 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.derbyclient.jar}:\
-    ${file.reference.derbyclient.jar-1}
+    ${file.reference.derbyclient.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
