--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,7 @@ dist.jar=${dist.dir}/group9.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.derbyclient.jar=C:\\Users\\nicole\\Documents\\NetBeansProjects\\db-derby-10.13.1.1-lib\\lib\\derbyclient.jar
+file.reference.derbyclient.jar-1=C:\\Users\\Joseph Haftl\\Documents\\NetBeansProjects\\db-derby-10.13.1.1-lib\\lib\\derbyclient.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -38,7 +38,7 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.derbyclient.jar}
+    ${file.reference.derbyclient.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -49,7 +49,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
